--- a/css/styles.css
+++ b/css/styles.css
@@ -168,19 +168,20 @@ li {
 
 /* ========= SOLUTION ========= */
 
-.solution {
-  padding-top: 200px;
-  padding-bottom: 200px;
+.thumb {
+  display: flex;
+  height: 600px;
   background-color: var(--hero-bg-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero/bg.jpg);
-  background-size: auto;
+  background-size: auto auto;
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
+
 .solution-container {
   display: flex;
   flex-direction: column;
@@ -223,6 +224,7 @@ li {
   padding-left: 32px;
   border: none;
 }
+
 /* ========= / SOLUTION ========= */
 
 /* ========= SPECIFICS ========= */
@@ -240,6 +242,15 @@ li {
 }
 .specifics-list-card {
   flex-basis: calc((100% - 90px) / 4);
+}
+
+.specifics-list-icon-bg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  background-color: var(--background-color);
+  margin-bottom: 30px;
 }
 
 .title-section {
@@ -553,6 +564,9 @@ li {
 .filters button:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 /* ========= GALERY ========= */
@@ -567,6 +581,12 @@ li {
 .gallery-card {
   width: 370px;
   background: var(--primary-white-color);
+}
+
+.gallery-card:hover,
+.gallery-card:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .gallery-card-bottom {
