--- a/css/styles.css
+++ b/css/styles.css
@@ -101,13 +101,6 @@ li {
   column-gap: 50px;
 }
 
-.mail-phone-link {
-  display: flex;
-  align-items: baseline;
-  column-gap: 50px;
-  margin-left: auto;
-}
-
 .navigation .link {
   font-weight: 500;
   line-height: 1.1;
@@ -116,44 +109,32 @@ li {
   text-decoration: none;
 }
 
-.contact-mail {
+.mail-phone-list {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
   margin-left: auto;
+}
+
+.contact-nav {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--primary-text-color);
 }
-.contact-mail:focus,
-.contact-mail:hover {
+.contact-nav:focus,
+.contact-nav:hover {
   color: var(--accent-color);
-}
-.envelope-icon {
-  margin-right: 10px;
-  width: 16px;
-  height: 12px;
-  fill: var(--primary-text-color);
-}
-.contact-mail:focus .envelope-icon,
-.contact-mail:hover .envelope-icon {
   fill: var(--accent-color);
 }
 
-.contact-phone {
-  display: flex;
-  color: var(--primary-text-color);
-}
-.phone-icon {
-  width: 10px;
-  height: 16px;
+.nav-contact-icon {
   margin-right: 10px;
-  fill: var(--primary-text-color);
-}
-
-.contact-phone:focus,
-.contact-phone:hover {
-  color: var(--accent-color);
-}
-.contact-phone:focus .phone-icon,
-.contact-phone:hover .phone-icon {
-  fill: var(--accent-color);
+  fill: currentColor;
 }
 
 .navigation .link:focus,
@@ -181,7 +162,22 @@ li {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-
+.solution {
+  display: flex;
+  max-width: 1600px;
+  min-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--hero-bg-color);
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero/bg.jpg);
+  background-size: auto auto;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
 .solution-container {
   display: flex;
   flex-direction: column;
@@ -279,7 +275,7 @@ li {
 /* =========  SERVICES ========= */
 
 .services {
-  padding-top: 94px;
+  padding-top: 0px;
   padding-bottom: 94px;
 }
 .title-section-service {
@@ -328,7 +324,7 @@ li {
   display: flex;
   justify-content: center;
   column-gap: 10px;
-  padding-top: 16px;
+  margin-top: 16px;
 }
 
 .social-list-link {
@@ -391,7 +387,7 @@ li {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .clients-list {
@@ -583,8 +579,13 @@ li {
   background: var(--primary-white-color);
 }
 
-.gallery-card:hover,
-.gallery-card:focus {
+.gallery-card-link {
+  display: block;
+  text-decoration: none;
+}
+
+.gallery-card-link:hover,
+.gallery-card-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
